--- a/SignalR.Routing/SignalR.Routing.csproj
+++ b/SignalR.Routing/SignalR.Routing.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{E6C4A35C-25CC-4374-A0FB-4955F679E833}</ProjectGuid>
+    <ProjectGuid>{D3F59F13-5430-4996-9E5E-82BC269BAD29}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SignalR.Server</RootNamespace>
-    <AssemblyName>SignalR.Server</AssemblyName>
+    <RootNamespace>SignalR.Routing</RootNamespace>
+    <AssemblyName>SignalR.Routing</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -33,45 +33,32 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Owin">
+    <Reference Include="Owin, Version=0.8.0.0, Culture=neutral, PublicKeyToken=f585506a2da1fef4, processorArchitecture=MSIL">
       <HintPath>..\packages\Owin.0.8-ctp1\lib\net40\Owin.dll</HintPath>
     </Reference>
-    <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\SignalR\TaskAsyncHelper.cs">
-      <Link>TaskAsyncHelper.cs</Link>
-    </Compile>
-    <Compile Include="App_Packages\Gate.Sources.0.4.0-ctp1\AppBuilderInlineExtensions.cs" />
-    <Compile Include="App_Packages\Gate.Sources.0.4.0-ctp1\AppBuilderMapExtensions.cs" />
-    <Compile Include="App_Packages\Gate.Sources.0.4.0-ctp1\AppBuilderRunExtensions.cs" />
-    <Compile Include="App_Packages\Gate.Sources.0.4.0-ctp1\AppBuilderUseExtensions.cs" />
-    <Compile Include="App_Packages\Gate.Sources.0.4.0-ctp1\Environment.cs" />
-    <Compile Include="App_Packages\Gate.Sources.0.4.0-ctp1\Headers.cs" />
-    <Compile Include="App_Packages\Gate.Sources.0.4.0-ctp1\Mapping\MapBuilder.cs" />
-    <Compile Include="App_Packages\Gate.Sources.0.4.0-ctp1\Mapping\UrlMapper.cs" />
-    <Compile Include="App_Packages\Gate.Sources.0.4.0-ctp1\NotFound.cs" />
-    <Compile Include="App_Packages\Gate.Sources.0.4.0-ctp1\OwinConstants.cs" />
-    <Compile Include="App_Packages\Gate.Sources.0.4.0-ctp1\Request.cs" />
-    <Compile Include="App_Packages\Gate.Sources.0.4.0-ctp1\Response.cs" />
-    <Compile Include="App_Packages\Gate.Sources.0.4.0-ctp1\Utils\ParamDictionary.cs" />
-    <Compile Include="App_Packages\Gate.Sources.0.4.0-ctp1\Utils\Spool.cs" />
-    <Compile Include="AppBuilderExtensions.cs" />
-    <Compile Include="GlobalHost.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServerRequest.cs" />
-    <Compile Include="ServerRequestCookies.cs" />
-    <Compile Include="ServerResponse.cs" />
+    <Compile Include="RouteExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
+    <ProjectReference Include="..\..\katana\src\Katana.Server.AspNet\Katana.Server.AspNet.csproj">
+      <Project>{E31826E6-C29A-4F08-BD4F-E17ACA793BBC}</Project>
+      <Name>Katana.Server.AspNet</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SignalR.Server\SignalR.Server.csproj">
+      <Project>{E6C4A35C-25CC-4374-A0FB-4955F679E833}</Project>
+      <Name>SignalR.Server</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SignalR\SignalR.csproj">
       <Project>{1B9A82C4-BCA1-4834-A33E-226F17BE070B}</Project>
       <Name>SignalR</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
