--- a/samples/SignalR.Hosting.AspNet.Samples/packages.config
+++ b/samples/SignalR.Hosting.AspNet.Samples/packages.config
@@ -11,4 +11,5 @@
   <package id="jQuery.UI.Combined" version="1.8.13" />
   <package id="json2" version="1.0" />
   <package id="Newtonsoft.Json" version="4.5.4" />
+  <package id="Owin" version="0.8-ctp1" />
 </packages>
